fixed issue where image was overflowing div

--- a/index.css
+++ b/index.css
@@ -44,6 +44,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    /* height: calc(100% - (var(--margin-inner-container) * 2)); */
 }
 
 .containerRight {
@@ -70,12 +72,16 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: #F8F5F9;
+    /* background-color: #F8F5F9; */
 }
 
 img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
+    max-height: 100%;
+    max-height: calc(100% - 80px);
+    margin-top: 40px;
+    margin-bottom: 40px;
     object-fit: contain;
 }
 
